# eightfold

./: Cargo.toml  README.md  deny.toml  flake.nix
.cargo/: config.toml
.github/workflows/: main.yml  rust.yml  security.yml
assets/doc/: header.html
examples/: voxelize.rs
lib/: README.md
lib/common/: Cargo.toml  README.md
lib/common/src/: lib.rs  macros.rs
lib/common/src/macros/: meta.rs  ops.rs
lib/hedron/: Cargo.toml  README.md
lib/hedron/src/: data.rs  de.rs  lib.rs  mesh.rs  ser.rs
lib/hedron/src/data/: buffer.rs  mesh.rs
lib/hedron/src/data/buffer/: wgpu.rs
lib/hedron/src/data/mesh/: primitive.rs
lib/hedron/src/data/mesh/primitive/: attribute.rs
lib/hedron/src/data/mesh/primitive/attribute/: delta.rs  storage.rs
lib/hedron/src/data/mesh/primitive/attribute/storage/: dynamic.rs
lib/hedron/src/de/: gltf.rs
lib/hedron/src/ser/: gltf.md  gltf.rs
lib/hedron/tests/: types.rs
lib/stablevec/: Cargo.toml  README.md
lib/stablevec/src/: alloc.rs  conv.rs  debug.rs  lib.rs  macros.rs
lib/stablevec/tests/: macros.rs  safety.rs  zst.rs
samples/: README.md
samples/voxelize/: Cargo.toml
samples/voxelize/src/: buffer.rs  cli.rs  main.rs  preview.rs
samples/voxelize/src/buffer/: accessor.rs
src/: error.rs  geom.rs  lib.rs  mesh.rs  octant.rs  render.rs  spatial.rs  tree.rs  vec.rs  view.rs
src/geom/: octant.rs
src/spatial/: bounding_box.rs  bounding_cube.rs  debug.rs  error.rs  octant.rs  traits.rs
src/tree/: debug.rs  error.rs  iter.rs  merge.rs  node.rs  proxy.rs  sample.rs  slice.rs
stablevec/src/: lib.rs
tests/: types.rs
