[package]
name = "eightfold"
version = "0.1.0"
authors = ["Ash Walker <ash@ashwalker.net>"]
edition = "2021"

description = "3D space partitioning library"
readme = true
repository = "https://github.com/SignalWalker/eightfold"
license = "LGPL-3.0-or-later"

keywords = [ "gamedev", "graphics", "octree" ]
categories = [ "data-structures", "rendering", "rendering::data-formats", "game-development", "mathematics" ]

[dependencies]
nalgebra = "^0.31"
num-traits = "^0.2"
thiserror = "^1.0"
parking_lot = "^0.12"

# stablevec
bitvec = "^1.0"

# tracing
tracing = { optional = true, version = "^0.1" }

# spatial
parry3d = { optional = true, version = "^0.10" }

# mesh

# render

[dev-dependencies]
clap = { version = "^4.0", features = [ "derive", "env" ] }
tobj = { version = "^3.2", features = [ "reordering" ] }
tracing-subscriber = { version = "^0.3", features = [ "time", "env-filter", "parking_lot", "local-time", "json" ] }
time = { version = "^0.3", features = ["formatting", "local-offset", "macros"] }
wgpu = { version = "^0.14" }

[features]
default = []
spatial = [ "dep:parry3d" ]
mesh = [ "spatial" ]
render = [ "mesh" ]
tracing = [ "dep:tracing" ]

[[example]]
name = "voxelize"
required-features = [ "tracing", "render", ]
