[package]
name = "eightfold"
version = "0.1.0"
authors = ["Ash Walker <ash@ashwalker.net>"]
edition = "2021"

description = "3D spatial partitioning library"
readme = true
repository = "https://github.com/SignalWalker/eightfold"
license = "LGPL-3.0-or-later"

keywords = [ "gamedev", "graphics", "octree" ]
categories = [ "data-structures", "rendering", "rendering::data-formats", "game-development", "mathematics" ]

[workspace]
# using "samples" instead of "examples" because i don't want to have to have every example dependency in this file
# "lib" contains extra libraries separate from the main eightfold library
members = [ "samples/*", "lib/*" ]

[dependencies]
eightfold-common = { path = "./lib/common" }

nalgebra = "^0.31"
num-traits = "^0.2"
thiserror = "^1.0"

stablevec = { path = "./lib/stablevec" }

# tracing
tracing = { optional = true, version = "^0.1" }

# spatial
parry3d = { optional = true, version = "^0.12" }

# mesh
hedron = { optional = true, path = "./lib/hedron" }

# render

[dev-dependencies]
quickcheck = { version = "^1.0", default_features = false, features = [] }
quickcheck_macros = { version = "^1.0" }

[features]
default = []
spatial = [ "dep:parry3d" ]
mesh = [ "spatial", "dep:hedron" ]
render = [ "mesh" ]
tracing = [ "dep:tracing" ]

# some specific configuration for CI builds so they go faster / have better caching
[profile.ci]
inherits = "dev"
opt-level = 0
debug = 0
strip = "symbols"
debug-assertions = true # so that tests are subject to debug asserts
overflow-checks = true # as above
lto = "off"
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.ci.package."*"]
debug = 0
