[package]
name = "hedron"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/SignalWalker/eightfold"
license = "LGPL-3.0-or-later"

[dependencies]
stablevec = { path = "../stablevec" }
eightfold-common = { path = "../common" }

nalgebra = "^0.32"
num-traits = "^0.2"

thiserror = "^1.0"

static_assertions = "^1.1"

# wgpu
wgpu = { optional = true, version = "^0.14", features = [] }

# vulkan
ash = { optional = true, version = "^0.37", features = [] }

# gltf
gltf = { optional = true, version = "^1.0", features = [] }

# obj
tobj = { optional = true, version = "^3.2", features = [] }

[features]
default = [ "serialize", "wgpu" ]

vulkan = [ "dep:ash" ]
wgpu = [ "dep:wgpu" ]

serialize = []
ser_gltf = [ "dep:gltf", "serialize" ]

deserialize = []
de_obj = [ "dep:tobj", "deserialize" ]
de_gltf = [ "dep:gltf", "deserialize" ]

