[package]
name = "voxelize"
version = "0.1.0"
edition = "2021"

publish = false

[dependencies]
eightfold = { path = "../..", features = ["render", "tracing"] }
hedron = { path = "../../lib/hedron", features = [] }

ouroboros = "^0.18"

nalgebra = "^0.33"
num-traits = "^0.2"

tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = [
  "time",
  "env-filter",
  "parking_lot",
  "local-time",
  "json",
] }
time = { version = "^0.3", features = ["formatting", "local-offset", "macros"] }
thiserror = "^1.0"

static_assertions = "^1.1"

clap = { version = "^4", features = ["derive", "env"] }

wgpu = { version = "^22" }

memmap2 = { version = "^0.9" }

crossbeam = "^0.8"

winit = "^0.30"
pollster = "^0.3"

# gltf
gltf = { optional = true, version = "^1" }
url = { optional = true, version = "^2", features = [
] } # for reading URIs from within glTF documents

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { optional = true, version = "^0.6", features = ["stats"] }
tikv-jemalloc-ctl = { optional = true, version = "^0.6", features = ["stats"] }

[features]
default = ["jemalloc", "gltf"]
gltf = ["dep:gltf", "dep:url"]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
